test/negative/exn_arity.mli.expected

*******************************
********** Parsed file ********
*******************************
exception E of int * int 
val f : int -> unit[@@gospel {| f i
    raises E _ -> false |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

exception E of int * int 

val f : int -> unit
(*@  f i
    with ...
     *)
File "exn_arity.mli", line 5, characters 11-23:
Error: Type checking error: exception pattern doesn't match its type
